# hyper-leezus

./: .dockerignore  .env.example  .gitignore  README.md  constraints.txt  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: backfill.yml  ci-cd.yml  ingest.yml  train.yml  weekly-newsletter.yml
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat
docs/: architecture.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: bet-actions.tsx  bet-button.tsx  game-card.tsx  game-preview.tsx  local-time.tsx  nav.tsx  pick-card.tsx  search-bar.tsx
frontend/src/hooks/: useBets.ts
infra/docker/: data-ingestion-cron.Dockerfile  data-ingestion.Dockerfile  prediction-api.Dockerfile  python-service.Dockerfile  training-service-cron.Dockerfile  training-service.Dockerfile
infra/requirements/: base.txt  data-ingestion.txt  feature-pipeline.txt  gha-training.txt  monitoring-service.txt  prediction-api.txt  realtime-streaming.txt  training-service.txt
ml/common/: contracts.py
ml/evaluation/: metrics.py
ml/feast_repo/: feature_store.yaml  features.py
ml/models/: ensemble.py
ml/training/: airflow_dag.py  datasets.py  league_configs.py  pipeline.py  registry.py  trainers.py
services/: db.py  domain.py  models.py  providers.py  repositories.py  shared.py
services/data_ingestion/: run_backfill.py  run_once.py
services/training_service/: run_once.py
tests/: test_smoke.py
(+69 files in other folders)
